# python-javabridge-windows

./: .gitignore  MANIFEST.in  README.md  setup.cfg
javabridge/: .alternative__javabridge.cp310-win_amd64.pyd  _javabridge.cp310-win_amd64.pyd  _javabridge.cp311-win_amd64.pyd  _javabridge.cp37-win_amd64.pyd  _javabridge.cp38-win_amd64.pyd  _javabridge.cp39-win_amd64.pyd  _version.py  download_java.py  locate.py
