[metadata]
name = javabridge
author = Francesco Padovani
author_email = francesco.padovani@helmholtz-muenchen.de
description = Python package to run a Java VM in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SchmollerLab/Cell_ACDC
project_urls =
    Author contact = https://www.helmholtz-munich.de/ife/about-us/people/staff-detail/ma/8873/Dr.-Padovani/index.html
    Schmoller lab = https://www.helmholtz-munich.de/ife/research/kurt-schmoller-cell-and-organelle-size-control/research/index.html
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires =
    >=3.7
include_package_data = True
install_requires =
    numpy
    requests
    tqdm
